issue #74: menu done and home dashboard started
Signed-off-by: Rdadamos <rodrigodadamos@gmail.com>
Signed-off-by: Wallacy Braz <wallacy.braz@live.com>

--- a/SIGS_prototype/pages/cadastrar.html
+++ b/SIGS_prototype/pages/cadastrar.html
@@ -21,7 +21,11 @@
       <div class="singUp">
 
         <div class="flexContainer">
-          <figure class="logo"><img src="../assets/img/sigs_logo.png" alt="SIGS Logos" /></figure>
+          <figure class="logo">
+            <a href="../index.html">
+              <img src="../assets/img/sigs_logo.png" alt="SIGS Logos" />
+            </a>
+          </figure>
           <div>
             <h1>Novo Usuário</h1>
           </div>
