issue #74: calendar table adjustment
Signed-off-by: Rdadamos <rodrigodadamos@gmail.com>
Signed-off-by: Wallacy Braz <wallacy.braz@live.com>

--- a/SIGS_prototype/pages/home.html
+++ b/SIGS_prototype/pages/home.html
@@ -86,24 +86,24 @@
             <table class="table table-hover whiteBackground">
               <thead>
                 <tr>
-                  <td>Período</td>
-                  <td>Início</td>
-                  <td>Fim</td>
+                  <th>Período</th>
+                  <th>Início</th>
+                  <th>Fim</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>Ajuste</td>
+                  <th>Ajuste</th>
                   <td>XX/XX/XXXX</td>
                   <td>XX/XX/XXXX</td>
                 </tr>
                 <tr>
-                  <td>Alocação</td>
+                  <th>Alocação</th>
                   <td>XX/XX/XXXX</td>
                   <td>XX/XX/XXXX</td>
                 </tr>
                 <tr>
-                  <td>Letivo</td>
+                  <th>Letivo</th>
                   <td>XX/XX/XXXX</td>
                   <td>XX/XX/XXXX</td>
                 </tr>
